--- a/package.json
+++ b/package.json
@@ -8,8 +8,11 @@
     "start": "node index.js"
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "denv": "^1.0.4",
     "dotenv": "^16.4.7",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "mysql2": "^3.11.5"
   }
 }
