--- a/package.json
+++ b/package.json
@@ -21,7 +21,6 @@
     "dotenv": "^16.4.7",
     "express": "^4.17.1",
     "gh-pages": "^6.2.0",
-    "mysql2": "^3.11.5",
-    "react-scripts": "5.0.1"
-  }
+    "mysql2": "^3.11.5"
+    }
 }
