--- a/package.json
+++ b/package.json
@@ -6,21 +6,15 @@
   "type": "module",
   "scripts": {
     "start": "node index.js",
-    "dev": "npm run build && node server.js",
-    "test": "jest",
-    "predeploy": "npm run build",
-    "build": "react-scripts build",
-    "deploy": "gh-pages -d build"
+    "test": "echo Nenhum comando de teste foi especificado."
   },
   "dependencies": {
-    "bcrypt": "^5.1.1",
-    "build": "^0.1.4",
+    "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "denv": "^1.0.4",
-    "deploy": "^1.0.3",
-    "dotenv": "^16.4.7",
-    "express": "^4.17.1",
-    "gh-pages": "^6.2.0",
-    "mysql2": "^3.11.5"
+    "dotenv": "^16.4.5",
+    "express": "^4.21.1",
+    "moment": "^2.30.1",
+    "mysql2": "^3.11.4"
     }
 }
