--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "test": "echo Nenhum comando de teste foi especificado."
   },
   "dependencies": {
+    "bcrypt": "^5.1.1",
     "bootstrap": "^5.3.3",
     "cors": "^2.8.5",
     "denv": "^1.0.4",
@@ -16,5 +17,5 @@
     "express": "^4.21.1",
     "moment": "^2.30.1",
     "mysql2": "^3.11.4"
-    }
+  }
 }
