--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "dev": "node index.js",
     "start": "node index.js",
-    "build": "echo 'Build command here'",
+    "build": "react-scripts build",
     "test": "echo Nenhum comando de teste foi especificado."
   },
   "dependencies": {
@@ -17,6 +17,7 @@
     "denv": "^1.0.4",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mysql2": "^3.11.4"
+    "mysql2": "^3.11.4",
+    "react-scripts": "^5.0.1"
   }
 }
